--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 Title: Jeisson Pulido
-#Logo: (some directory)
-theme:jekyll-theme-minimal
+Logo: /portfolio/Jeisson.JPG
+Description: Graduate Student at University of Southern California
+theme: jekyll-theme-minimal
