--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 Title: Jeisson Pulido
-Logo: /portfolio/Jeisson.JPG
+Logo: Jeisson.JPG
 Description: Graduate Student at University of Southern California
 theme: jekyll-theme-minimal
