--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-Title: Jeisson Pulido
-Logo: Jeisson.JPG
-Description: Graduate Student at University of Southern California
+title: Jeisson Pulido
+logo: Jeisson.JPG
+description: Graduate Student at University of Southern California
 theme: jekyll-theme-minimal
